--- a/index.html
+++ b/index.html
@@ -14,18 +14,18 @@
         <h1 class="home-title">HOME</h1>
         <h1 class="home-score">0</h1>
         <div class="buttons">
-          <button class="home-btn-1">+1</button>
-          <button class="home-btn-2">+2</button>
-          <button class="home-btn-3">+3</button>
+          <button class="btn home-btn-1">+1</button>
+          <button class="btn home-btn-2">+2</button>
+          <button class="btn home-btn-3">+3</button>
         </div>
       </div>
       <div class="right-col">
         <h1>GUEST</h1>
         <h1 class="guest-score">0</h1>
         <div class="buttons">
-          <button class="guest-btn-1">+1</button>
-          <button class="guest-btn-2">+2</button>
-          <button class="guest-btn-3">+3</button>
+          <button class="btn guest-btn-1">+1</button>
+          <button class="btn guest-btn-2">+2</button>
+          <button class="btn guest-btn-3">+3</button>
         </div>
       </div>
     </div>
